--- a/quickstart/my.yaml
+++ b/quickstart/my.yaml
@@ -9,7 +9,7 @@
 
 
 # Train/val/test sets as 1) dir: path/to/imgs, 2) file: path/to/imgs.txt, or 3) list: [path/to/imgs1, path/to/imgs2, ..]
-path: ../../byTA_hw1  # dataset root dir
+path: C:/NTU/CVPDL/byTA_hw1  # dataset root dir
 train: 
   - train/images  # train images (relative to 'path')
   - train/labels  # train labels (relative to 'path')
@@ -41,4 +41,4 @@ names:
 
 
 # Download script/URL (optional)
-download: https://github.com/ultralytics/assets/releases/download/v0.0.0/coco8.zip
+# download: https://github.com/ultralytics/assets/releases/download/v0.0.0/coco8.zip
